--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
         <h2>Group members</h2>
 
         <p>Team Star members: Atilla Ehmedli, Zahra Aliyeva, Mehdi Nasirli, and Rubabe Khalilova. <br>
-            All group members are SITE students and have a great passion for their faculty. 
-            Mehdi and Atilla are 18 years old, while Zahra and Rubabe are 17 years old. 
-            This is their first year at ADA University. <br> All members are interested in coding, playing interesting games, and learning new things.
-            Both Atilla and Mehdi major in electronics, and their main hobby is spending time in front of the computer. 
-            Zahra majors in computer science and Rubabe majors in IT. Rubabe's and Zahra's hobby is reading and drawing, respectively.
+            All group members are SITE students and have a great passion for their faculty.<br>
+            The band members are each 18 years old, and this is their first year at ADA University.<br> All members are interested in coding, playing interesting games, and learning new things.<br> Both Atilla and Mehdi major in electronics, and their main hobby is spending time in front of the computer.<br>Finally, Zahra says reading is her hobby.
         </p>
 
         <img class="portraits" src="media/images.jpeg">
@@ -174,3 +171,4 @@
 </body>
 
 </html>
+
